新增选择头像页面，设置简介页面，发现页面增加搜索功能，设置某些label可以显示两行信息。

--- a/easyBook/Info.plist
+++ b/easyBook/Info.plist
@@ -28,13 +28,17 @@
 	<array>
 		<string>armv7</string>
 	</array>
-	<key>UISupportedInterfaceOrientations</key>
-	<array>
-		<string>UIInterfaceOrientationPortrait</string>
-	</array>
 	<key>UISupportedInterfaceOrientations~ipad</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
 	</array>
+	<key>UISupportedInterfaceOrientations</key>
+	<array>
+		<string>UIInterfaceOrientationPortrait</string>
+	</array>
+	<key>NSCameraUsageDescription</key>
+	<string>“简约”需要使用您的相机拍照</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>“简约”需要访问您的相册</string>
 </dict>
 </plist>
